--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask==1.1.2
 Flask-Compress==1.5.0
 gunicorn==20.0.4
 lxml==4.5.2
-numpy==1.18.5
+numpy
 pandas==1.4.0
 plotly==4.10.0
 scikit-learn==1.0.2
