--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-dash==1.16.2
-dash-core-components==1.12.1
-dash-html-components==1.1.1
-dash-renderer==1.8.2
-dash-table==4.10.1
-Flask==1.1.2
-Flask-Compress==1.5.0
-gunicorn==20.0.4
-lxml==4.5.2
+dash
+dash-core-components
+dash-html-components
+dash-renderer
+dash-table
+Flask
+Flask-Compress
+gunicorn
+lxml
 numpy
-pandas==1.4.0
-plotly==4.10.0
+pandas
+plotly
 scikit-learn
 scipy
-sklearn
-yfinance==0.1.70
+yfinance
